--- a/MeOS.vcxproj
+++ b/MeOS.vcxproj
@@ -22,7 +22,7 @@
     <ProjectGuid>{7B919060-AD16-4CEE-BD54-597430A46460}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>MeOS</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -75,7 +75,7 @@
     <GenerateManifest>false</GenerateManifest>
     <LibraryPath>C:\Users\Michalis\Documents\Git Repositories\MeOS\Debug;$(LibraryPath)</LibraryPath>
     <PostBuildEventUseInBuild>true</PostBuildEventUseInBuild>
-    <OutDir>$(SolutionDir)Builds-dev\</OutDir>
+    <OutDir>$(SolutionDir)Builds\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -224,6 +224,10 @@ call format-light.bat"</Command>
     <ClInclude Include="MeOS\screen.h" />
     <ClInclude Include="MeOS\SerialDebugger.h" />
     <ClInclude Include="MeOS\system.h" />
+    <ClInclude Include="MeOS\test_base.h" />
+    <ClInclude Include="MeOS\test_Fat32.h" />
+    <ClInclude Include="MeOS\test_open_file_table.h" />
+    <ClInclude Include="MeOS\test_page_cache.h" />
     <ClInclude Include="MeOS\thread_exception.h" />
     <ClInclude Include="MeOS\thread_sched.h" />
     <ClInclude Include="MeOS\timer.h" />
@@ -253,7 +257,6 @@ call format-light.bat"</Command>
     <ClCompile Include="MeOS\i217.cpp" />
     <ClCompile Include="MeOS\ip.cpp" />
     <ClCompile Include="MeOS\kernel_stack.cpp" />
-    <ClCompile Include="MeOS\MassStorageDefinitions.cpp" />
     <ClCompile Include="MeOS\mutex.cpp" />
     <ClCompile Include="MeOS\isr.cpp">
       <AssemblerOutput Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">AssemblyAndSourceCode</AssemblerOutput>
@@ -292,6 +295,9 @@ call format-light.bat"</Command>
     <ClCompile Include="MeOS\icmp.cpp" />
     <ClCompile Include="MeOS\spinlock.cpp" />
     <ClCompile Include="MeOS\system.c" />
+    <ClCompile Include="MeOS\test_FAT32.cpp" />
+    <ClCompile Include="MeOS\test_open_file_table.cpp" />
+    <ClCompile Include="MeOS\test_page_cache.cpp" />
     <ClCompile Include="MeOS\thread_exception.cpp" />
     <ClCompile Include="MeOS\thread_sched.cpp">
       <AssemblerOutput Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">AssemblyAndSourceCode</AssemblerOutput>
