--- a/MeOS.vcxproj.filters
+++ b/MeOS.vcxproj.filters
@@ -251,6 +251,9 @@
     <ClInclude Include="MeOS\queue_spsc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MeOS\pe_loader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MeOS\cstring.c">
@@ -410,6 +413,9 @@
       <Filter>tests</Filter>
     </ClCompile>
     <ClCompile Include="MeOS\test_dev.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MeOS\pe_loader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
